--- a/login.html
+++ b/login.html
@@ -11,9 +11,9 @@
     <div class="login_form">
         <h1 class="title">Login</h1>
         <form action="/login" method="post">
-            <label for="username">Username <i class="fa-regular fa-user"></i>:</label>
+            <label for="username"><i class="fa-regular fa-user"></i> Username</label>
             <input type="text" id="username" name="username" placeholder="Enter Username"><br><br>
-            <label for="password">Password <i class="fa-solid fa-key"></i>:</label>
+            <label for="password"><i class="fa-solid fa-key"></i> Password</label>
             
             <input type="password" id="password" name="password" placeholder="Enter Password" required><br><br>
             <input type="submit" id="submit" value="Login"><br><br>
